--- a/phptest/index.html
+++ b/phptest/index.html
@@ -7,6 +7,27 @@
     <title>Login</title>
 </head>
 <body>
+    <div class="container">
+        <div class="box form-box">
+            <header>Login</header>
+            <form action="" method="post">
+                <div class="filed input">
+                    <label for="username">Username</label>
+                    <input type="text" name="username" id="username"  required>
+                </div>
+
+                <div class="filed input">
+                    <label for="password">Password</label>
+                    <input type="password" name="password" id="password"  required>
+                </div>
+
+                <div class="filed">
+                
+                    <input type="submit" name="username" id="username"  required>
+                </div>
+            </form>
+        </div>
+    </div>
     
 </body>
 </html>
