--- a/phptest/index.html
+++ b/phptest/index.html
@@ -36,10 +36,41 @@
               required
             />
           </div>
-          <div class="links">
-            Don't have account? <a href="reg.html">Registration</a>
-          </div>
         </form>
+        <div class="container">
+          <div class="box form-box">
+            <header>Sing Up</header>
+            <form action="" method="post">
+              <div class="field input">
+                <label for="username">Username</label>
+                <input type="text" name="username" id="username" required />
+              </div>
+              <div class="field input">
+                <label for="email">Email</label>
+                <input type="text" name="email" id="email" required />
+              </div>
+              <div class="field input">
+                <label for="age">Age</label>
+                <input type="number" name="age" id="age" required />
+              </div>
+
+              <div class="field input">
+                <label for="password">Password</label>
+                <input type="password" name="password" id="password" required />
+              </div>
+
+              <div class="field">
+                <input
+                  type="submit"
+                  class="btn"
+                  name="submit"
+                  value="Login"
+                  required
+                />
+              </div>
+            </form>
+          </div>
+        </div>
       </div>
     </div>
   </body>
