--- a/phptest2/edit.html
+++ b/phptest2/edit.html
@@ -18,15 +18,15 @@
         <form action="" method="post">
           <div class="field input">
             <label for="username">Username</label>
-            <input type="text" name="username" id="username" required />
+            <input type="text" name="username" id="username" required readonly />
           </div>
           <div class="field input">
             <label for="email">Email</label>
-            <input type="text" name="email" id="email" required />
+            <input type="text" name="email" id="email" required readonly/>
           </div>
           <div class="field input">
             <label for="age">Age</label>
-            <input type="number" name="age" id="age" required />
+            <input type="number" name="age" id="age" required readonly/>
           </div>
 
           <div class="field input">
